--- a/Introdução/exer003.html
+++ b/Introdução/exer003.html
@@ -31,8 +31,8 @@
 
     <script>
       function somar() {
-        var num1 = parseInt(document.getElementById("num1").value);
-        var num2 = parseInt(document.getElementById("num2").value);
+        var num1 = parseFloat(document.getElementById("num1").value);
+        var num2 = parseFloat(document.getElementById("num2").value);
         var resultado = num1 + num2;
         document.getElementById("resultado").value = resultado;
         alert("A soma de " + num1 + " e " + num2 + " é igual a " + resultado + ".");
